test/files/neg/nested-annotation.check
nested-annotation.scala:8: error: nested classfile annotations must be defined in java; found: inline
  @ComplexAnnotation(new inline) def bippy(): Int = 1
                     ^
one error found
